[package]
name = "bitcoin-aba"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
rusty_ulid = "0.11.0"

rusqlite = { version = "0.25.3" }