[package]
name = "aba"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [ "web" ]

[dependencies]
# lib used by server and web and other clients
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
rusty_ulid = { version = "0.11", features = ["serde"] }
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
time = {version = "0.3", features = ["serde-human-readable", "macros"] }

# can't build on m1 macos for wasm
bdk = { version = "0.18.0", default-features = false, optional = true }

# server bin
actix-web = { version = "4.0", optional = true }
actix-web-static-files = { version = "4.0", optional = true }
static-files = { version = "0.2.1", optional = true }
env_logger = { version = "0.9", optional = true }
failure = { version = "0.1.7", optional = true }
futures = { version = "0.3.1", optional = true }
num_cpus = { version = "1.13", optional = true }
r2d2 = { version = "0.8.2", optional = true }
r2d2_sqlite = { version = "0.14", optional = true }
rusqlite = { version = "0.21", optional = true }

[build-dependencies]
static-files = "0.2.1"

[features]
default = ["server"]
server = ["actix-web", "env_logger", "failure", "futures", "num_cpus", "r2d2", "r2d2_sqlite", "rusqlite", "bdk" ]
# package static web files with server bin, must build web/dist directory first
web-files = [ "actix-web-static-files", "static-files" ]

[[bin]]
name = "aba_server"
required-features = ["server"]