[package]
name = "aba_web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.17"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = "0.19"
reqwasm = "0.5.0"
aba = { path = "..", default-features = false }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }